--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,13 +18,13 @@ flutter_ios_podfile_setup
 # --------------------------------------------------------------
 
 target 'Runner' do
-  # gRPC toolchain as modular headers (Objective-C pods expose modules)
+  # gRPC toolchain as modular headers (ObjC pods expose modules)
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
   pod 'BoringSSL-GRPC', :modular_headers => true
 
-  # Firebase/Google deps that Swift pods need as modules when linked statically
+  # Firebase/Google deps that Swift pods require as modules when linked statically
   pod 'FirebaseCore',              :modular_headers => true
   pod 'FirebaseCoreExtension',     :modular_headers => true
   pod 'FirebaseCoreInternal',      :modular_headers => true
@@ -34,26 +34,21 @@ target 'Runner' do
   pod 'GoogleUtilities',           :modular_headers => true
   pod 'RecaptchaInterop',          :modular_headers => true
 
-  # Install all Flutter pods; CocoaPods will keep them **static libraries** by default
+  # Install all Flutter pods; CocoaPods keeps them as static libs by default
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
-    # Align Flutter and Pods build settings; safe on CocoaPods 1.16.x
     flutter_additional_ios_build_settings(t) rescue nil
 
     t.build_configurations.each do |config|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
-      # Enable C/ObjC modules and allow non-modular imports inside modules
       s['CLANG_ENABLE_MODULES'] = 'YES'
       s['DEFINES_MODULE'] = 'YES'
       s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-
-      # Keep this OFF with static libraries
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
