--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,7 +16,7 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # gRPC toolchain as modular headers (needed with static pods)
+  # gRPC toolchain as modules
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
