--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,13 +16,17 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # gRPC toolchain as modules
+  # Build pods as **static frameworks** so Swift pods generate `-Swift.h`
+  use_frameworks! :linkage => :static
+
+  # Make non-modular ObjC deps expose modules so Swift frameworks can import them
+  # gRPC toolchain
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
   pod 'BoringSSL-GRPC', :modular_headers => true
 
-  # Firebase/Google deps that must expose modules
+  # Firebase & Google deps that need module maps when linking Swift as static frameworks
   pod 'FirebaseCore',              :modular_headers => true
   pod 'FirebaseCoreExtension',     :modular_headers => true
   pod 'FirebaseCoreInternal',      :modular_headers => true
@@ -37,14 +41,21 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |t|
-    flutter_additional_ios_build_settings(t) rescue nil
+    begin
+      flutter_additional_ios_build_settings(t)
+    rescue
+    end
     t.build_configurations.each do |config|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+
+      # Keep modules enabled so Swift frameworks can import modularized ObjC headers
       s['CLANG_ENABLE_MODULES'] = 'YES'
       s['DEFINES_MODULE'] = 'YES'
       s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+
+      # Do NOT distribute ABI-stable – avoids extra constraints
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
