--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,17 +16,16 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build pods as **static frameworks** so Swift pods generate `-Swift.h`
+  # Build Swift/ObjC pods as **static frameworks** so Swift pods emit `-Swift.h`
   use_frameworks! :linkage => :static
 
-  # Make non-modular ObjC deps expose modules so Swift frameworks can import them
-  # gRPC toolchain
+  # gRPC toolchain as modular headers
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
   pod 'BoringSSL-GRPC', :modular_headers => true
 
-  # Firebase & Google deps that need module maps when linking Swift as static frameworks
+  # Firebase/Google deps that need module maps when Swift is static
   pod 'FirebaseCore',              :modular_headers => true
   pod 'FirebaseCoreExtension',     :modular_headers => true
   pod 'FirebaseCoreInternal',      :modular_headers => true
@@ -50,12 +49,10 @@ post_install do |installer|
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
 
-      # Keep modules enabled so Swift frameworks can import modularized ObjC headers
       s['CLANG_ENABLE_MODULES'] = 'YES'
       s['DEFINES_MODULE'] = 'YES'
       s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
 
-      # Do NOT distribute ABI-stable – avoids extra constraints
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
