--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,23 +9,23 @@ project 'Runner', {
 
 install! 'cocoapods', :warn_for_multiple_pod_sources => false
 
-# Flutter integration
+# Flutter integration (works on CI and locally)
 flutter_bin  = %x(which flutter).strip
 flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
 require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Build Swift/ObjC pods as **static frameworks** so Swift pods emit `-Swift.h`
+  # Build pods as static frameworks (generates -Swift.h when needed)
   use_frameworks! :linkage => :static
 
-  # gRPC toolchain as modular headers
+  # gRPC toolchain as modules
   pod 'gRPC-C++',       :modular_headers => true
   pod 'gRPC-Core',      :modular_headers => true
   pod 'gRPC-ProtoRPC',  :modular_headers => true
   pod 'BoringSSL-GRPC', :modular_headers => true
 
-  # Firebase/Google deps that need module maps when Swift is static
+  # Firebase & Google deps that need modulemaps when static-linked
   pod 'FirebaseCore',              :modular_headers => true
   pod 'FirebaseCoreExtension',     :modular_headers => true
   pod 'FirebaseCoreInternal',      :modular_headers => true
@@ -44,15 +44,14 @@ post_install do |installer|
       flutter_additional_ios_build_settings(t)
     rescue
     end
+
     t.build_configurations.each do |config|
       s = config.build_settings
       s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-
       s['CLANG_ENABLE_MODULES'] = 'YES'
       s['DEFINES_MODULE'] = 'YES'
       s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-
       s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
     end
   end
