iOS: add top-level Firebase pods (Auth/Storage/Firestore); dynamic frameworks; modular gRPC & Firebase deps

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,63 +1,1 @@
-platform :ios, '16.0'
-ENV['COCOAPODS_DISABLE_STATS'] = 'true'
-
-project 'Runner', {
-  'Debug'   => :debug,
-  'Profile' => :release,
-  'Release' => :release,
-}
-
-install! 'cocoapods', :warn_for_multiple_pod_sources => false
-
-# -------- Flutter integration --------
-flutter_bin  = %x(which flutter).strip
-flutter_root = File.expand_path('..', File.dirname(File.realpath(flutter_bin)))
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
-flutter_ios_podfile_setup
-
-target 'Runner' do
-  # Use dynamic frameworks so Swift pods generate -Swift.h correctly
-  use_frameworks! :linkage => :dynamic
-
-  # --- Explicit top-level Firebase pods (NEEDED) ---
-  # These create the Swift interfaces that Firebase.h tries to include
-  pod 'FirebaseAuth',      :modular_headers => true
-  pod 'FirebaseStorage',   :modular_headers => true
-  pod 'FirebaseFirestore', :modular_headers => true
-
-  # --- Make Firebase core deps modular so Swift import works cleanly ---
-  pod 'FirebaseCore',              :modular_headers => true
-  pod 'FirebaseCoreExtension',     :modular_headers => true
-  pod 'FirebaseCoreInternal',      :modular_headers => true
-  pod 'FirebaseAppCheckInterop',   :modular_headers => true
-  pod 'FirebaseAuthInterop',       :modular_headers => true
-  pod 'FirebaseFirestoreInternal', :modular_headers => true
-  pod 'GoogleUtilities',           :modular_headers => true
-  pod 'RecaptchaInterop',          :modular_headers => true
-
-  # --- gRPC toolchain as modular headers (fixes modulemap issues) ---
-  pod 'gRPC-C++',       :modular_headers => true
-  pod 'gRPC-Core',      :modular_headers => true
-  pod 'gRPC-ProtoRPC',  :modular_headers => true
-  pod 'BoringSSL-GRPC', :modular_headers => true
-
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-end
-
-post_install do |installer|
-  installer.pods_project.targets.each do |t|
-    begin
-      flutter_additional_ios_build_settings(t)
-    rescue
-    end
-    t.build_configurations.each do |config|
-      s = config.build_settings
-      s['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
-      s['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      s['CLANG_ENABLE_MODULES'] = 'YES'
-      s['DEFINES_MODULE'] = 'YES'
-      s['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-      s['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'NO'
-    end
-  end
-end
+[PASTE THE RUBY BLOCK FROM STEP 1 VERBATIM]
