--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,5 +35,11 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      # Unblock non-modular includes (Firebase/Firebase.h in some plugin sources)
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      # Ensure pods define modules when built as frameworks
+      config.build_settings['DEFINES_MODULE'] = 'YES'
+    end
   end
 end
