--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,6 @@
+Set-Location "C:\flutter_projects\first_flutter_app"
+
+$pod = @'
 platform :ios, '15.5'
 
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -25,8 +28,10 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_ios_podfile_setup
 
-# Important: make Swift pods dynamic to avoid modular header requirement
+# Build Swift pods as dynamic frameworks (fixes earlier CocoaPods error)
 use_frameworks! :linkage => :dynamic
+# Generate module maps for non-modular pods like FirebaseCore/GoogleUtilities
+use_modular_headers!
 
 target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
@@ -36,10 +41,11 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
-      # Unblock non-modular includes (Firebase/Firebase.h in some plugin sources)
       config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
-      # Ensure pods define modules when built as frameworks
       config.build_settings['DEFINES_MODULE'] = 'YES'
     end
   end
 end
+'@
+
+$pod | Set-Content -Encoding ASCII ios\Podfile
