--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,31 +25,9 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_ios_podfile_setup
 
-# Build Swift pods as dynamic frameworks + prefer modular headers
+# Build Swift pods as dynamic frameworks + generate module maps
 use_frameworks! :linkage => :dynamic
 use_modular_headers!
-
-# Force modular headers for Firebase family pods explicitly
-pre_install do |installer|
-  firebase_like = %w[
-    Firebase
-    FirebaseCore
-    FirebaseCoreInternal
-    FirebaseCoreExtension
-    FirebaseAuthInterop
-    FirebaseAppCheckInterop
-    FirebaseFirestore
-    FirebaseFirestoreInternal
-    FirebaseStorage
-    GoogleUtilities
-    RecaptchaInterop
-  ]
-  installer.pod_targets.each do |pt|
-    if firebase_like.include?(pt.name)
-      pt.current_target_definition.uses_modular_headers!
-    end
-  end
-end
 
 target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
@@ -62,7 +40,6 @@ post_install do |installer|
       config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
       config.build_settings['DEFINES_MODULE'] = 'YES'
       config.build_settings['CLANG_ENABLE_MODULES'] = 'YES'
-      # (optional) keep header paths clean
       config.build_settings['HEADER_SEARCH_PATHS'] = '$(inherited)'
     end
   end
