--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-﻿name: nyari
+name: nyari
 description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
@@ -12,10 +12,10 @@ dependencies:
     sdk: flutter
 
   # --- Firebase (updated to iOS 11+ compatible versions) ---
-  firebase_core: ^3.3.0
-  cloud_firestore: ^5.4.0
-  firebase_auth: ^5.2.0
-  firebase_storage: ^12.2.0
+  firebase_core: 4.1.1
+  cloud_firestore: 6.0.2
+  firebase_auth: 6.1.0
+  firebase_storage: 13.0.2
 
   # --- Maps & Location ---
   google_maps_flutter: ^2.12.3
