--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^1.1.2
   google_mlkit_language_id: ^0.13.0
   google_mlkit_translation: ^0.13.0
+  firebase_crashlytics: ^5.0.2
 
 dev_dependencies:
   flutter_test:
