--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: nyari
+﻿name: nyari
 description: A lifestyle & local discovery app built with Flutter + Firebase
 publish_to: "none"
 
-version: 1.0.0+122
+version: 1.0.0+123
 
 environment:
   sdk: ">=3.4.0 <4.0.0"
