local: icon + plist + main + pubspec changes

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,16 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nyari.app">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- If you show user location on the map: -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- Optional: detect connectivity -->
+    <!-- Optional helpers -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- Optional: if you ever request background location on Android 10+ -->
-    <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> -->
-
-    <!-- (Optional but recommended) Declare you use GPS/location hardware -->
     <uses-feature android:name="android.hardware.location.gps" android:required="false" />
     <uses-feature android:name="android.hardware.location.network" android:required="false" />
 
@@ -20,15 +18,13 @@
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="false">
 
-        <!-- Google Maps API key (points to res/values/google_maps_api.xml) -->
+        <!-- Google Maps / Places API keys injected from Gradle -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <!-- If you use Places on Android (autocomplete/details), include this too -->
+            android:value="${MAPS_API_KEY}" />
         <meta-data
             android:name="com.google.android.libraries.places.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".MainActivity"
@@ -54,14 +50,4 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-
-    <!-- (Optional) Only keep this if your app actually uses PROCESS_TEXT -->
-    <!--
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.PROCESS_TEXT" />
-            <data android:mimeType="text/plain" />
-        </intent>
-    </queries>
-    -->
 </manifest>
