--- a/functions/package.json
+++ b/functions/package.json
@@ -1,23 +1,23 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "private": true,
+  "engines": { "node": "20" },
+  "type": "commonjs",
+  "main": "index.js",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "start": "npm run serve",
+    "deploy": "firebase deploy --only functions:onReviewWrite",
+    "deploy:all": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "engines": {
-    "node": "22"
-  },
-  "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
-  },
-  "private": true
+  }
 }
