--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,17 +13,17 @@
 	<key>PROJECT_ID</key>
 	<string>nyari-6f49b</string>
 	<key>STORAGE_BUCKET</key>
-	<string>nyari-6f49b.firebasestorage.app</string>
+	<string>nyari-6f49b.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:113120647809:ios:b83115a0ceb93199b84b80</string>
 </dict>
